--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,40 @@
+alembic==1.13.0
 bcrypt==3.2.0
-blinker==1.4
+blinker==1.7.0
+certifi==2023.11.17
 cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
+dnspython==2.4.2
+email-validator==2.1.0.post1
 Flask==3.0.0
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.14.1
-Flask-SQLAlchemy==3.0.0
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.0.0
 greenlet==3.0.2
+gunicorn==21.2.0
+idna==3.6
+infinity==1.5
+intervals==0.9.2
 itsdangerous==2.1.2
 jedi==0.18.0
 Jinja2==3.1.2
+Mako==1.3.0
 MarkupSafe==2.1.3
 packaging==23.2
 parso==0.8.3
 psycopg2-binary==2.9.9
 pycparser==2.21
+requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.23
+SQLAlchemy-Utils==0.41.1
 typing_extensions==4.9.0
+urllib3==2.1.0
+validators==0.22.0
 Werkzeug==3.0.1
-WTForms==3.0.0
+WTForms==3.1.1
+WTForms-Alchemy==0.18.0
+WTForms-Components==0.10.5
